Fix z-index in nav bar

--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -33,6 +33,7 @@
   gap: 20px;
   position: sticky;
   top: 0;
+  z-index: 999;
 }
 
 .navToggle {
